# scorep_jupyter_kernel_python

./: .gitignore  ExampleJUmPER.ipynb  ExamplePyPerf.ipynb  LICENSE  README.md  install.sh  pyproject.toml  scorep_jupyter_python_kernel.py  setup.py  userpersistence.py  userpersistency.py
.github/workflows/: formatter.yml  lint.yml  linter.yml  unit_test.yml
benchmark/: README.md  balancedDistributionIterator.py  bench.sh  common.py  displaydata.ipynb  main.py  parallel_marshall.py  run_bench.sbatch
examples/: ExampleBasic.ipynb  ExampleMonitoring.ipynb  ExampleNotebook.ipynb  demonstrator.ipynb
examples/gpt-demo/: 01-GPT-Training.ipynb  02-GPT-Output.ipynb  README.md  demonstrator.ipynb  fairy_test.txt  fairytales.txt  fairytales_demo.txt  model.py  scripts.txt  trainer.py  utils.py
scorep_jupyter/: kernel.py  userpersistence.py
src/: logging_config.py
src/jumper/: context.py  install.py  kernel.py  kernel_messages.py  logging_config.py  logo.py  perfdatahandler.py  userpersistence.py  visualization.py
src/jumper/multinode_monitor/: abstract_monitor.py  slurm_monitor.py
src/jumper/parallel_monitor/: slurm_monitor.py
src/magic_extension/: __init__.py  magic.py
src/parallel_marshall/: __init__.py  balanced_distribution_iterator.py  parallel_marshall.py
src/perfmonitor/: __init__.py  __main__.py  perfmonitor.py
src/pyperf-jupyter/: install.py
src/pyperf_jupyter/: install.py  kernel.py  perfdatahandler.py  userpersistence.py  visualization.py
src/pyperf_jupyter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scorep_jupyter/: install.py  kernel.py  kernel_messages.py  logging_config.py  userpersistence.py
test/: README.md  userpersistence_test.py  userpersistency_test.py
test/cases/: test_code_1.py  test_code_1_target_userdefinitions  test_code_1_target_variables  test_code_2.py  test_code_2_target_userdefinitions
tests/: README.md  ipykernel_exec.ipynb  test_kernel.py  test_userpersistence.py
tests/kernel/: ipykernel_exec.yaml  multicell.ipynb  multicell.yaml  notebook.ipynb  persistence.ipynb  persistence.yaml  scorep_env.yaml  scorep_exec.ipynb  scorep_exec.yaml  scorep_pythonargs.ipynb  scorep_pythonargs.yaml  writemode.ipynb  writemode.yaml
tests/userpersistence/: code.py  definitions.py  os_environ.json  sys_path.json  variables.json
