[build-system]
requires = [
  "setuptools>=61",
  "wheel",
]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name='scorep-jupyter'
version='0.2'
authors=[
  {name='Elias Werner',email='elias.werner@tu-dresden.de'},
]
description='This is the Score-P Python Kernel that enables you to execute Python code in Jupyter Notebooks with Score-P. The kernel is based on the Score-P Python bindings.'
license={ file="LICENSE" }
requires-python = ">=3.8"
classifiers=[
"Programming Language :: Python :: 3",
]

dependencies = [
  "ipykernel",
  "jupyter-client",
  "astunparse",
  "scorep==4.0.2",
  "uuid",
  "dill"
]

[project.urls]
homepage = "https://github.com/score-p/scorep_jupyter_kernel_python"
